fixed alignment bug

--- a/css/standings.scss
+++ b/css/standings.scss
@@ -13,7 +13,6 @@
 	}
 	.amounts{
 		float:right;
-		width:55%;
 		div{
 			text-align: right;
 		}
